--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --forceExit"
+    "test": "jest --detectOpenHandles  --forceExit"
   },
   "author": "",
   "license": "ISC",
